--- a/app/themes/tute/partials/site/footer.htm
+++ b/app/themes/tute/partials/site/footer.htm
@@ -1,6 +1,11 @@
-<div id="footer">
-    <div class="container">
-        <hr />
-        <p class="muted credit">&copy; 2013 - {{ "now"|date("Y") }} Alexey Bobkov &amp; Samuel Georges.</p>
-    </div>
+<div class="container">
+    ©<script>
+    document.write(new Date().getFullYear())
+
+    </script> 天津职业技术师范大学经济与管理学院实验实训中心
+    <br>
+    <small>
+    	<span class="glyphicon glyphicon-blackboard text-primary"></span> 源代码地址：<a
+      href="https://github.com/mengyunzhi/lab_of_tute">https://github.com/mengyunzhi/lab_of_tute</a>&nbsp;&nbsp;<span class="glyphicon glyphicon-heart text-danger"></span> 技术支持：梦云智软件开发团队
+  </small>
 </div>
