--- a/app/themes/tute/partials/site/header.htm
+++ b/app/themes/tute/partials/site/header.htm
@@ -1,22 +1,22 @@
-<!-- Nav -->
-<nav id="layout-nav" class="navbar navbar-inverse navbar-fixed-top navbar-autohide" role="navigation">
+<div id="banner">
+</div>
+<div id="logo">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                <span class="sr-only">切换导航</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ 'home'|page }}">实验实训中心</a>
-        </div>
-        <div class="collapse navbar-collapse navbar-main-collapse">
-            <ul class="nav navbar-nav">
-                <li class="separator hidden-xs"></li>
-                <li class="{% if this.page.id == 'home' %}active{% endif %}"><a href="{{ 'home'|page }}">首页</a></li>
-                <li class="{% if this.page.id == 'ajax' %}active{% endif %}"><a href="{{ 'ajax'|page }}">新闻通知</a></li>
-                <li class="{% if this.page.id == 'plugins' %}active{% endif %}"><a href="{{ 'plugins'|page }}">中心概况</a></li>
-            </ul>
-        </div>
+        <img src="{{ 'assets/images/logopng.png'|theme }}" />
+        <h3>天津职业技术师范大学经管学院实验实训中心欢迎您！</h3>
     </div>
-</nav>
+</div>
+<div class="menu">
+    <div class="container">
+        <ul>
+            <li><a ui-sref="main" ui-sref-active="active">首页</a></li>
+            <li><a ui-sref="hot" ui-sref-active="active">热点问题</a></li>
+            <li><a href="/teacher/">随堂资源</a>
+            <li><a ui-sref="nav" ui-sref-active="active">站内导航</a></li>
+            <li><a ui-sref="about" ui-sref-active="active">中心简介</a></li>
+            <li><a ui-sref="check" ui-sref-active="active">验收专栏</a></li>
+            <li><a ui-sref="resource" ui-sref-active="active">教学资源</a></li>
+            <div class="clear"></div>
+        </ul>
+    </div>
+</div>
