--- a/app/themes/tute/partials/site/footer.htm
+++ b/app/themes/tute/partials/site/footer.htm
@@ -1,11 +1,10 @@
 <div class="container">
-    ©<script>
+    ©2005-<script>
     document.write(new Date().getFullYear())
 
     </script> 天津职业技术师范大学经济与管理学院实验实训中心
     <br>
     <small>
-    	<span class="glyphicon glyphicon-blackboard text-primary"></span> 源代码地址：<a
-      href="https://github.com/mengyunzhi/lab_of_tute">https://github.com/mengyunzhi/lab_of_tute</a>&nbsp;&nbsp;<span class="glyphicon glyphicon-heart text-danger"></span> 技术支持：梦云智软件开发团队
+    	<span class="glyphicon glyphicon-heart text-danger"></span> 技术支持：<a href="http://www.mengyunzhi.com" target="_blank">梦云智软件开发团队</a>
   </small>
 </div>
