--- a/app/themes/tute/partials/site/header.htm
+++ b/app/themes/tute/partials/site/header.htm
@@ -9,13 +9,19 @@
 <div class="menu">
     <div class="container">
         <ul>
-            <li><a ui-sref="main" ui-sref-active="active">首页</a></li>
-            <li><a ui-sref="hot" ui-sref-active="active">热点问题</a></li>
+            <li><a href="/" class="{% if this.page.id == 'index' %}active{% endif %}">首页</a></li>
+            <li><a href="/" class="{% if this.page.id == 'soft' %}active{% endif %}">实验软件</a></li>
             <li><a href="/teacher/">随堂资源</a>
-            <li><a ui-sref="nav" ui-sref-active="active">站内导航</a></li>
-            <li><a ui-sref="about" ui-sref-active="active">中心简介</a></li>
-            <li><a ui-sref="check" ui-sref-active="active">验收专栏</a></li>
-            <li><a ui-sref="resource" ui-sref-active="active">教学资源</a></li>
+            <li><a href="/" class="{% if this.page.id == 'about_us' %}active{% endif %}">中心概况</a></li>
+            <li><a href="/" class="{% if this.page.id == 'news' %}active{% endif %}">新闻动态</a></li>
+            <li><a href="/" class="{% if this.page.id == 'teaching' %}active{% endif %}">实验教学</a></li>
+            <li><a href="/" class="{% if this.page.id == 'rules' %}active{% endif %}">规章制度</a></li>
+            <li><a href="/" class="{% if this.page.id == 'equipment_and_environment' %}active{% endif %}">设备与环境</a></li>
+            <li><a href="/" class="{% if this.page.id == 'achievements' %}active{% endif %}">中心成果</a></li>
+            <li><a href="/" class="{% if this.page.id == 'appointment' %}active{% endif %}">实验预约</a></li>
+            <li><a href="/" class="{% if this.page.id == 'resources' %}active{% endif %}">教学资源</a></li>
+            <li><a href="/" class="{% if this.page.id == 'acceptance' %}active{% endif %}">验收专栏</a></li>
+            <li><a href="/">学院首页</a></li>
             <div class="clear"></div>
         </ul>
     </div>
