--- a/app/themes/tute/partials/site/header.htm
+++ b/app/themes/tute/partials/site/header.htm
@@ -10,10 +10,10 @@
     <div class="container">
         <ul>
             <li><a href="/" class="{% if this.page.id == 'index' %}active{% endif %}">首页</a></li>
-            <li><a href="/" class="{% if this.page.id == 'soft' %}active{% endif %}">实验软件</a></li>
+            <li><a href="/soft" class="{% if this.page.id == 'soft' %}active{% endif %}">实验软件</a></li>
             <li><a href="/teacher/">随堂资源</a>
-            <li><a href="/" class="{% if this.page.id == 'about_us' %}active{% endif %}">中心概况</a></li>
-            <li><a href="/" class="{% if this.page.id == 'news' %}active{% endif %}">新闻动态</a></li>
+            <li><a href="/about_us" class="{% if this.page.id == 'about_us' %}active{% endif %}">中心概况</a></li>
+            <li><a href="/news" class="{% if this.page.id == 'news' %}active{% endif %}">新闻动态</a></li>
             <li><a href="/" class="{% if this.page.id == 'teaching' %}active{% endif %}">实验教学</a></li>
             <li><a href="/" class="{% if this.page.id == 'rules' %}active{% endif %}">规章制度</a></li>
             <li><a href="/" class="{% if this.page.id == 'equipment_and_environment' %}active{% endif %}">设备与环境</a></li>
