--- a/app/plugins/yunzhiclub/appointment/components/addForm/default.htm
+++ b/app/plugins/yunzhiclub/appointment/components/addForm/default.htm
@@ -1,15 +1,20 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-        	<h3>请填写以下内容</h3>
-             <form data-request="{{ __SELF__ }}::onSave" data-request-redirect="/appointment" data-request-success="alert('预约成功')">
-            	<div class="form-group">
+            <h3>请填写以下内容</h3>
+            <div class="alert alert-success" role="alert">
+                预约申请将在2个工作日内审核，请您提前预约。
+            </div>
+            <form data-request="{{ __SELF__ }}::onSave" data-request-redirect="/appointment"
+                  data-request-success="alert('预约成功')">
+                <div class="form-group">
                     <label for="name">姓名</label>
                     <input type="text" name="name" class="form-control" id="name" placeholder="姓名">
                 </div>
                 <div class="form-group">
                     <label for="email">电子邮箱</label>
-                    <input type="email" name="email" class="form-control" id="email" placeholder="Email">
+                    <input type="email" name="email" class="form-control" id="email"
+                           placeholder="预约受理信息将发送至您填写的邮箱（可能被识别为垃圾邮件）">
                 </div>
                 <div class="form-group">
                     <label for="phone">手机号码</label>
@@ -17,17 +22,44 @@
                 </div>
                 <div class="form-group">
                     <label for="datetime">预约时间</label>
-                    <input type="datetime-local" name="datetime" class="form-control" id="datetime" placeholder="预约时间">
+                    <input data-provide="datepicker" type="datetime-local" name="datetime" class="form-control"
+                           id="datetime" placeholder="预约时间">
                 </div>
-                 <div class="form-group">
-                    <label for="room">预约教室</label>
-                    <input type="text" name="room" class="form-control" id="room" placeholder="预约教室">
+
+                <div class="form-group">
+                    <label>预约教室</label>
+                    <select class="form-control">
+                        <option>701 证券投资实验室</option>
+                        <option>702 信用管理实验室</option>
+                        <option>801 财会实验室</option>
+                        <option>802 物流管理实验室</option>
+                        <option>810 微格教学实验室</option>
+                        <option>811 手工记账实验室</option>
+                        <option>819 情景实验室</option>
+                        <option>820 研究生专用实验室</option>
+                        <option>821,823</option>
+                        <option>822,824 电子商务实验室</option>
+                    </select>
                 </div>
                 <div class="form-group">
                     <label for="datetime">预约事项</label>
-                   	<textarea name="reason" class="form-control" rows="3"></textarea>
+                    <textarea
+                            name="reason"
+                            class="form-control"
+                            rows="3"
+                            placeholder="申请原因、需要的软硬件支持等"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">提交</button>
+                <div class="form-group">
+                    <label for="dtp_input1" class="col-md-2 control-label">DateTime Picking</label>
+                    <div class="input-group date form_datetime col-md-5" data-date="1979-09-16T05:25:07Z"
+                         data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
+                        <input class="form-control" size="16" type="text" value="" readonly>
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
+                    </div>
+                    <input type="hidden" id="dtp_input1" value=""/><br/>
+                </div>
             </form>
         </div>
     </div>
