--- a/app/themes/tute/layouts/tute.htm
+++ b/app/themes/tute/layouts/tute.htm
@@ -13,6 +13,7 @@ description = "tute layout"
     <link rel="icon" type="image/png" href="{{ 'assets/images/october.png'|theme }}">
     <link href="{{ 'assets/css/vendor.css'|theme }}" rel="stylesheet">
     <link href="{{ 'assets/css/theme.css'|theme }}" rel="stylesheet">
+    <link href="{{ 'assets/css/bootstrap.min.css'|theme }}" rel="stylesheet">
     <link href="{{ 'assets/css/style.css'|theme }}" rel="stylesheet">
     {% styles %}
 </head>
