--- a/app/plugins/yunzhiclub/appointment/components/addForm/default.htm
+++ b/app/plugins/yunzhiclub/appointment/components/addForm/default.htm
@@ -21,14 +21,19 @@
                     <input type="tel" name="phone" class="form-control" id="phone" placeholder="手机号码">
                 </div>
                 <div class="form-group">
-                    <label for="datetime">预约时间</label>
-                    <input data-provide="datepicker" type="datetime-local" name="datetime" class="form-control"
-                           id="datetime" placeholder="预约时间">
+                    <label>预约时间</label>
+                    <div class="input-group date form_datetime"
+                         data-date-format="yyyy MM dd - p HH:ii" data-link-field="datetime">
+                        <input class="form-control" size="16" type="text" value="" readonly>
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
+                    </div>
+                    <input type="hidden" id="datetime" name="datetime" value=""/><br/>
                 </div>
 
                 <div class="form-group">
                     <label>预约教室</label>
-                    <select class="form-control">
+                    <select class="form-control" name="room">
                         <option>701 证券投资实验室</option>
                         <option>702 信用管理实验室</option>
                         <option>801 财会实验室</option>
@@ -50,16 +55,7 @@
                             placeholder="申请原因、需要的软硬件支持等"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">提交</button>
-                <div class="form-group">
-                    <label for="dtp_input1" class="col-md-2 control-label">DateTime Picking</label>
-                    <div class="input-group date form_datetime col-md-5" data-date="1979-09-16T05:25:07Z"
-                         data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
-                        <input class="form-control" size="16" type="text" value="" readonly>
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
-                    </div>
-                    <input type="hidden" id="dtp_input1" value=""/><br/>
-                </div>
+
             </form>
         </div>
     </div>
