--- a/app/themes/tute/assets/css/style.css
+++ b/app/themes/tute/assets/css/style.css
@@ -118,8 +118,7 @@ content ol li {
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
-.marketing,
-.footer {
+.marketing {
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -140,7 +139,7 @@ content ol li {
 
 /* Custom page footer */
 .footer {
-    padding-top: 19px;
+    margin-top: 20px;
     color: #777;
     border-top: 1px solid #E37B40;
     text-align: center;
