--- a/app/themes/tute/layouts/tute.htm
+++ b/app/themes/tute/layouts/tute.htm
@@ -39,6 +39,7 @@ description = "tute layout"
     <script src="{{ 'assets/vendor/jquery.js'|theme }}"></script>
     <script src="{{ 'assets/vendor/bootstrap.js'|theme }}"></script>
     <script src="{{ 'assets/javascript/app.js'|theme }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     {% framework extras %}
     {% scripts %}
 
