--- a/app/plugins/yunzhiclub/nav/components/index/default.htm
+++ b/app/plugins/yunzhiclub/nav/components/index/default.htm
@@ -2,13 +2,13 @@
     <div class="container">
         <ul>
             <li><a href="/" class="{% if this.page.id == 'index' %}active{% endif %}">首页</a></li>
-            <li><a href="/soft" class="{% if this.page.id == 'soft' %}active{% endif %}">实验软件</a></li>
             <li><a href="/about_us" class="{% if this.page.id == 'about_us' %}active{% endif %}">中心概况</a></li>
-            <li><a href="/news" class="{% if (strpos(this.page.id, 'news') is not same as(false)) %}active{% endif %}"">新闻动态</a></li>
+            <li><a href="/news" class="{% if (strpos(this.page.id, 'news') is not same as(false)) %}active{% endif %}">新闻动态</a></li>
             <li><a href="/" class="{% if this.page.id == 'teaching' %}active{% endif %}">实验教学</a></li>
             <li><a href="/" class="{% if this.page.id == 'rules' %}active{% endif %}">规章制度</a></li>
-            <li><a href="/" class="{% if this.page.id == 'equipment_and_environment' %}active{% endif %}">设备与环境</a></li>
-            <li><a href="/" class="{% if this.page.id == 'achievements' %}active{% endif %}">中心成果</a></li>
+            <li><a href="/" class="{% if this.page.id == 'equipment_and_environment' %}active{% endif %}">教学视频</a></li>
+            <li><a href="/soft" class="{% if this.page.id == 'soft' %}active{% endif %}">实验软件</a></li>
+            <li><a href="/schedule" class="{% if (strpos(this.page.id, 'schedule') is not same as(false)) %}active{% endif %}">课表管理</a></li>
             <li><a href="/appointment" class="{% if (strpos(this.page.id, 'appointment') is not same as(false)) %}active{% endif %}">实验预约</a></li>
             <li><a href="/" class="{% if this.page.id == 'acceptance' %}active{% endif %}">验收专栏</a></li>
             <li><a href="/teacher/">教学资源</a>
