--- a/app/themes/tute/layouts/tute.htm
+++ b/app/themes/tute/layouts/tute.htm
@@ -39,7 +39,8 @@ description = "tute layout"
     <script src="{{ 'assets/vendor/jquery.js'|theme }}"></script>
     <script src="{{ 'assets/vendor/bootstrap.js'|theme }}"></script>
     <script src="{{ 'assets/javascript/app.js'|theme }}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.bootcss.com/angular.js/1.7.7/angular.min.js"></script>
+    <script src="https://cdn.bootcss.com/angular-ui-router/1.0.22/angular-ui-router.min.js"></script>
     {% framework extras %}
     {% scripts %}
 
