课表首页，初始化

--- a/app/plugins/yunzhiclub/appointment/components/index/default.htm
+++ b/app/plugins/yunzhiclub/appointment/components/index/default.htm
@@ -5,7 +5,7 @@
 {% set showPage = __SELF__.showPage %}
 <div class="container">
     <div class="row">
-        <div class="col-md-2 col-md-push-10">
+        <div class="col-md-2 col-md-push-10 text-right">
             <br>
             <a class="btn btn-primary" href="/appointment/add">我要预约</a>
         </div>
