--- a/app/plugins/yunzhiclub/schedule/components/index/default.htm
+++ b/app/plugins/yunzhiclub/schedule/components/index/default.htm
@@ -1,3 +1,3 @@
-<div class="container" ng-app="app">
-    <ui-view>页面正在加载，请稍候</ui-view>
+<div ng-app="app">
+    <ui-view><div class="container"><h3>页面正在加载，请稍候...</h3></div></ui-view>
 </div>
