--- a/app/plugins/yunzhiclub/appointment/components/addForm/default.htm
+++ b/app/plugins/yunzhiclub/appointment/components/addForm/default.htm
@@ -1,7 +1,6 @@
-<div class="container">
+<content class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3>请填写以下内容</h3>
             <div class="alert alert-success" role="alert">
                 预约申请将在2个工作日内审核，请您提前预约。
             </div>
@@ -59,10 +58,10 @@
                             rows="3"
                             placeholder="申请原因、需要的软硬件支持等"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">提交</button>
-
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary">提交</button>
+                </div>
             </form>
         </div>
     </div>
-    <br>
-</div>
+</content>
