--- a/app/plugins/yunzhiclub/schedule/components/index/web-app/app/view/main.html
+++ b/app/plugins/yunzhiclub/schedule/components/index/web-app/app/view/main.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2 col-md-push-10 text-right">
-                <a ui-sref="add" class="btn btn-primary">新增授课计划</a>
+                <a ui-sref="add" class="btn btn-primary">提交授课计划</a>
             </div>
         </div>
         <hr>
@@ -315,7 +315,6 @@
                 </div>
 
             </div>
-
         </div>
     </div>
 </content>
