--- a/app/plugins/yunzhiclub/nav/components/index/default.htm
+++ b/app/plugins/yunzhiclub/nav/components/index/default.htm
@@ -11,7 +11,7 @@
             <li><a href="/schedule" class="{% if (strpos(this.page.id, 'schedule') is not same as(false)) %}active{% endif %}">课表管理</a></li>
             <li><a href="/appointment" class="{% if (strpos(this.page.id, 'appointment') is not same as(false)) %}active{% endif %}">实验预约</a></li>
             <li><a href="/" class="{% if this.page.id == 'acceptance' %}active{% endif %}">验收专栏</a></li>
-            <li><a href="/teacher/">教学资源</a>
+            <li><a href="/resource" class="{% if (strpos(this.page.id, 'resource') is not same as(false)) %}active{% endif %}">教学资源</a>
             <li><a target="_blank" href="http://jgxy.tute.edu.cn/">学院首页</a></li>
             <div class="clear"></div>
         </ul>
