--- a/app/themes/tute/assets/css/style.css
+++ b/app/themes/tute/assets/css/style.css
@@ -217,3 +217,8 @@ content.soft p {
 .index-left ul li {
     margin-top: 5px;
 }
+
+.index-left h4 {
+    padding-bottom:10px;
+    border-bottom: 4px double #cd5c5c;
+}
